# pdes

./: .gitignore  CMakeLists.txt  main.cc
framework/: logger.h  numbers.h  types.h
framework/math/: matrix.h  ndarray.h  sparse_matrix.h  vector.h
framework/math/linear_solver/: bicgstab_solver.h  cg_solver.h  gauss_seidel.h  gauss_seidel_solver.h  jacobi_solver.h  linear_solver.h  lu_solver.h  precondition_identity.h  precondition_jacobi.h  precondition_ssor.h  preconditioner.h  solver_control.h  sor.h  sor_solver.h  ssor.h  ssor_solver.h  util.h
framework/math/linear_solver/preconditioner/: precondition_identity.h  precondition_ilu.h  precondition_jacobi.h  precondition_ssor.h  preconditioner.h
framework/math/spatial_discretization/: finite_volume.h  spatial_discretization.h
framework/mesh/: cell.cc  cell.h  face.cc  face.h  mesh.cc  mesh.h  mesh_vector.h  orthomesh_generator.cc  orthomesh_generator.h
modules/diffusion/: diffusion_model.h  diffusion_solver.cc  diffusion_solver.h
test/: CMakeLists.txt
test/framework/math/: test_matrix.cc  test_vector.cc
test/framework/math/linear_solver/: test_cg.cc  test_direct.cc  test_gauss_seidel.cc  test_jacobi.cc  test_krylov.cc  test_lu.cc  test_sor.cc  test_ssor.cc  test_stationary.cc
test/framework/math/linear_solver/utils/: matrix_builder.cc  matrix_builder.h  test_convergence.h
